# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./assets";
 export * from "./tickets";
 export * from "./comments";
 export * from "./ratings";
+export * from "./attachments";
